--- a/TODO.txt
+++ b/TODO.txt
@@ -1,8 +1,8 @@
-melhorar resolução de colisões retornando o tipo da colisão e não verdadeiro ou falso
 colisão jogador x inimigos
     matar inimigo - resolver queda (apenas desenho)
-    morrer
-morrer de queda
+    morrer - ok
+melhorar os collision probes (deixar de ser classe?)
+morrer de queda - tiles específicos?
 tiles invisíveis para os inimigos (colidem, mas o jogador não)
 backgrounds originais
 inimigos colidem entre si?
