--- a/TODO.txt
+++ b/TODO.txt
@@ -1,13 +1,12 @@
-permitir comentários nos arquivos de mapa
 criar preambulo de configurações (cor de fundo e música)
 backgrounds originais
-separar tiles de cenário, fundo etcv
+refazer sprites dobrando o tamanho
 
 colisão jogador x inimigos
     morrer - ok (resetar fase e subtrair vidas)
 
 inimigos colidem entre si?
-
+separar tiles de cenário, fundo etcv
 refatorar
 polimorfismo
 terminar inimigos
@@ -15,3 +14,9 @@ criar caixas interativas (moedas, "?" etc)
 criar GUI
 criar transição entre fases
 editor de fases - salvar e carregar
+
+
+
+fundos: 432 altura
+meu mario: 28 x 40
+mario sprite sheet: 14 x 20
