--- a/TODO.txt
+++ b/TODO.txt
@@ -1,24 +1,19 @@
-player -> mario
-alterar colission probe quando estiver maior ou menor
-melhorar colisão do mário
+ao morrer:
+    se tiver vidas: reiniciar fase
+    caso contrário: mostrar tela de game over e dar opção para reiniciar
+    
 implementar tiro quando mario estiver em flower
-colocar em estado invulnerável por alguns segundos
 movimentar power ups
 transição de power ups
+
+implementar estado "caindo" para correção de frame e evitar pular ao cair
+
 se já tiver power up:
     mushroom -> mushroom colocar na reserva
                 flower colocar mushroom na reserva
     flower -> mushroom colocar na reserva -> se já houver reserva, não faz nada
               flower colocar nar eserva   -> se a reserva for mushroom, troca
               
-implementar estado "caindo" para correção de frame e evitar pular ao cair
-
-processar mais músicas <- adicionar no mapa
-configurar quantidade máxima de músicas
-
-morrer com o tempo
-morre com colisão dos inimigos
-
 mudar de fases
 criar transição entre fases
 
