--- a/TODO.txt
+++ b/TODO.txt
@@ -1,17 +1,13 @@
 para versão final:
     
-    - criar caixas interativas (moedas, "?", powerup etc)
-         - adicionar interação
-         - ajustar mapas
-         - ajustar tiles (remoção das caixas)
-    
-    - atualizar readme
+    - implementar caixa interativa de mensagem
     
     - otimizações:
         - diminuir a quantidade de loops no GameWorld (muitos podem ser condensados)
         - colisão apenas para tiles e baddies que estão a uma certa distância (depende de organização matricial)
         - a partir da segunda fase o jogo está muito pesado (muitas iterações)
         - há muitas chamadas de funções desnecessárias
+        - o gargalo está na detectção de colisão. ao remover os baddies o jogo flui bem
         
     - tela de transição entre fases
         - efeito funil
