--- a/TODO.txt
+++ b/TODO.txt
@@ -1,20 +1,27 @@
 para versão final:
     
-    - implementar caixa interativa de mensagem
-    
     - otimizações:
         - diminuir a quantidade de loops no GameWorld (muitos podem ser condensados)
         - colisão apenas para tiles e baddies que estão a uma certa distância (depende de organização matricial)
         - a partir da segunda fase o jogo está muito pesado (muitas iterações)
         - há muitas chamadas de funções desnecessárias
         - o gargalo está na detectção de colisão. ao remover os baddies o jogo flui bem
-        
+    
+    - atualizar mapas
+    
+    - implementar caixa interativa de mensagem
+    
+    - transformação/transição
+        small->super;
+        small->flower;
+        super->flower;
+        super->small;
+        flower->small.
+    
     - tela de transição entre fases
         - efeito funil
         - contagem de pontos:
             1 segundo equivale a 50 pontos
-            
-    
             
 futuro:
     separar tiles de cenário, fundo etc
