introduction of rres resource file, changes in sound effects and musics, and resources reorganization

--- a/TODO.txt
+++ b/TODO.txt
@@ -1,5 +1,7 @@
 para versão final:
     
+    - implementar piranha e muncher
+    
     - transformação/transição
         small->super;
         small->flower;
