--- a/TODO.txt
+++ b/TODO.txt
@@ -1,5 +1,6 @@
 para versão final:
     
+    - aumentar os frames dos flying goombas
     - texto ao pegar itens (pontos e vidas)
     - efeitos ao pegar estrela
     - implementar baddie (MontyMole) (assets ok) -> seguir o mario
